# Heuristic_Benchmarking_Framework

./: .gitattributes  .gitignore  404.html  LICENSE  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
00_architectural_overview/: index.html
01_project_plan_and_workflow/: index.html
api/generator_cli/: index.html
api/heuristics_greedy/: index.html
api/hpc_framework_cli/: index.html
api/orchestrator_ssh_executor/: index.html
configs/: plan_phase_1_pilot.yaml
decisions/001_choice_heuristic_language/: index.html
decisions/003_metodologia_gerador_e_analise/: index.html
decisions/004_testing_and_ci/: index.html
docs/api/: generator_cli.md
docs/reports/: 01_instance_generator.md
docs/specs/: baseline_evolutive_v1.md  mealpy_integration_plan.md  reproducibility_checklist.md
docs/testing/: CI.md  TESTING.md  TRACEABILITY.md
docs/testing/testcases/: TC_001_modularity_gate.md  TC_002_cv_ceiling.md  TC_003_schema_freeze.md  TC_004_cli_examples.md  TC_005_perf_smoke.md
env/: pip-freeze.txt
protocol/proto_v3.1.1/: index.html
reports/01_instance_generator/: index.html
reports/02_experimental_campaign/: index.html
scripts/: aggregate_manifests.py  pack_manifest_v1.py  run_phase_1.sh
search/: search_index.json
specs/baseline_evolutive_v1/: index.html
specs/jsonschema/: solver_run.schema.v1.json
specs/mealpy_integration_plan/: index.html
specs/reproducibility_checklist/: index.html
src/gpp_core/: __init__.py  operator.py  smoke_operator.py
src/heuristics/: metrics.py
src/hpc_framework/: artifact_hygiene.py  cli.py  greedy_adapter.py  plan_runner.py  runner.py
testing/CI/: index.html
testing/TESTING/: index.html
testing/TRACEABILITY/: index.html
testing/testcases/TC_001_modularity_gate/: index.html
testing/testcases/TC_002_cv_ceiling/: index.html
testing/testcases/TC_003_schema_freeze/: index.html
testing/testcases/TC_004_cli_examples/: index.html
testing/testcases/TC_005_perf_smoke/: index.html
tests/: test_artifact_hygiene.py  test_artifact_hygiene_quarantine.py  test_cli_plan.py  test_cli_plan_integration.py  test_greedy_adapter.py  test_greedy_adapter_graph.py  test_greedy_adapter_observation.py  test_greedy_adapter_pipeline.py  test_heuristics_metrics.py  test_instances_sanity.py  test_modularity_gate_regression.py  test_operator.py  test_pack_manifest_v1.py  test_plan_configs.py  test_plan_runner.py  test_plan_runner_artifact_namespace.py  test_plan_runner_greedy.py  test_plan_runner_greedy_namespace.py  test_plan_runner_greedy_output.py  test_plan_runner_greedy_schema.py  test_plan_runner_integration.py  test_public_api.py  test_results_schema.py  test_runner_contract_cleanup.py  test_runner_instance_id_fallback.py  test_runner_smoke.py
